--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <div class="menuArreglado">
             <div class="nav-bar">
                 <nav class="nav">
-                    <a href="https://aleasesino.github.io/Alejandro/">Inicio</a><a href="#">Habilidades</a><a href="#">Skins</a><a href="#">Runas</a><a href="#">Creditos</a>
+                    <a href="https://aleasesino.github.io/Alejandro/">Inicio</a><a href="https://aleasesino.github.io/Alejandro2/">Habilidades</a><a href="https://aleasesino.github.io/ale3/">Skins</a><a href="#">Runas</a><a href="#">Creditos</a>
                 </nav>
             </div>  
         </div>
